SideBar, Rollup and Check box components have been added. + some common modules and components. tsconfig and webpack.config have been updated with path alies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
   "eslint.enable" : true,
   "eslint.workingDirectories": [
-    {"mode": "auto"}
+    {
+      "mode": "auto"
+    }
   ],
   "eslint.probe": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "eslint.options": {
-    "configFile": "eslintrc.json",
+    "configFile": ".vscode/eslintrc.json",
     "linebreak-style": ["", "windows"]
+  },
+  "[typescriptreact]": {
+    
   }
 }
