--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
