--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
-    "test": "mocha --require ts-node/register --watch-extentions ts src/**/*.spec.ts"
+    "test": "mocha --require ts-node/register src/**/*.spec.ts"
   },
   "browserslist": "> 0.25%, not dead",
   "keywords": [
