--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
     "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
-    "test": "mocha --require ts-node/register --project tsconfig.ts src/**/*.spec.ts"
+    "test": "mocha --require ts-node/register --require mock-local-storage --project tsconfig.ts src/**/*.spec.ts src/**/*.spec.js"
   },
   "browserslist": "> 0.25%, not dead",
   "keywords": [
@@ -52,6 +52,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.1.2",
+    "mock-local-storage": "^1.1.12",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "papaparse": "^5.1.1",
